# qt-cmake-tools

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GIT_SETUP.md  LICENSE  PROJECT_OVERVIEW.md  README.md
cmake/: CMakeLists.txt
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  TROUBLESHOOTING.md
examples/: CMakeLists.txt
examples/basic-app/: CMakeLists.txt
examples/basic-app/src/: main.cpp
examples/qml_app/: CMakeLists.txt
examples/qml_app/qml/: main.qml
examples/qml_app/src/: main.cpp
examples/widget_app/: CMakeLists.txt
examples/widget_app/src/: mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  README.md  test_cmake_modules.cpp
